Fix overflow on small screens, brief project descriptions

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ body {
 
 section {
     min-height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 section:nth-child(even) {
@@ -168,4 +168,8 @@ footer {
 
 .text-main {
     color: var(--main-color);
+}
+
+.text-comp {
+    color: var(--complimentary-color);
 }
